Replace the seekbar with a spinner
1.The seekbar is replaced by a spinner that it is used for changing the amount score.
2.Modified the layouts.
3.Renewed the functions.
4.Added a score list for the spinner.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,4 +6,10 @@
         <item>Game3</item>
         <item>Game4</item>
     </string-array>
+    <string-array name="scoreAmount" >
+    <item>1</item>
+    <item>2</item>
+    <item>4</item>
+    <item>6</item>
+    </string-array>
 </resources>
