--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
+    <!--score layout-->
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="140dp"
         android:gravity="center"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints"
@@ -23,6 +23,7 @@
             android:layout_marginTop="30dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:text="@string/scoreA"
             android:textSize="76sp" />
 
         <TextView
@@ -32,9 +33,10 @@
             android:layout_marginTop="30dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:text="@string/scoreB"
             android:textSize="76sp" />
     </LinearLayout>
-
+    <!--team name layout-->
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -56,7 +58,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/vsText"
             android:layout_width="3dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -74,7 +76,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
-
+    <!--team choose layout-->
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
@@ -118,6 +120,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"/>
         </LinearLayout>
+        <!--team radio choose layout-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -149,8 +152,9 @@
 
         </LinearLayout>
     </LinearLayout>
-
+    <!--game,score amount,sore changes layout-->
     <LinearLayout
+        android:id="@+id/chooseLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -158,27 +162,28 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="1dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="28dp"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/GameTitle"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="@string/gameTitle"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/gameName"
-        android:textAlignment="textEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:textSize="20sp"
-        android:text="AAAA" />
-</LinearLayout>
-
+        <!--game title layout-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/GameTitle"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/gameTitle"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/gameName"
+            android:textAlignment="textEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="50dp"
+            android:textSize="20sp"
+            android:text="@string/gameName" />
+        </LinearLayout>
+        <!--game choose-->
         <Spinner
             android:id="@+id/gameSpin"
             style="@style/Widget.AppCompat.Spinner.Underlined"
@@ -187,25 +192,25 @@
             android:entries="@array/games"
             android:overlapAnchor="false"
             android:spinnerMode="dropdown" />
-
+        <!--score amount title-->
         <TextView
-            android:id="@+id/Amount"
+            android:id="@+id/AmountTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/amountTitle"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-        <SeekBar
-            android:id="@+id/seekbar"
+        <!--score amount choose-->
+        <Spinner
+            android:id="@+id/amountSpin"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
-            android:max="20"
-            android:min="0"
-            android:progress="8" />
-
+            android:layout_height="65dp"
+            android:entries="@array/scoreAmount"
+            android:overlapAnchor="false"
+            android:spinnerMode="dropdown" />
+        <!--score buttons layout-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="108dp"
@@ -220,13 +225,13 @@
                 android:text="@string/scoreTitle"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
+            <!--increase and decrease buttons layout-->
             <LinearLayout
-                android:layout_width="72dp"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal"
-                android:paddingHorizontal="24dp">
+                android:paddingHorizontal="20dp">
 
                 <Button
                     android:id="@+id/desButton"
@@ -254,8 +259,8 @@
                     android:text="@string/insButton"
                     android:textSize="20sp" />
             </LinearLayout>
-        </LinearLayout>
 
+        </LinearLayout>
 
     </LinearLayout>
 
