--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#7B7B7B</color>
+    <color name="blue">#14213d</color>
+    <color name="yellow">#fca311</color>
+    <color name="light_grey">#6c757d</color>
+    <color name="grey_300">#dee2e6</color>
 </resources>
