--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,84 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+    <!--    Student Name: Yujia Ji (A00246407)-->
     <style name="Theme.YujiaJIscore" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/grey</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/light_grey</item>
+        <item name="colorSecondaryVariant">@color/yellow</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/myTextViewStyle</item>
+        <item name="android:buttonStyle">@style/myButtonStyle</item>
     </style>
+    <!--  Light mode Style-->
+    <!--  TextView Style-->
+    <style name="myTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <!--  Score Text Style-->
+    <style name="myTextViewStyle.Score">
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textSize">76sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <!--  Title Text Style-->
+    <style name="myTextViewStyle.Title">
+        <item name="android:textColor">@color/yellow</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+    <!--  Team name text Style-->
+    <style name="myTextViewStyle.TeamName">
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <!--  Item text Style-->
+    <style name="myTextViewStyle.Item">
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginLeft">50dp</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
+    <!--  Changing score amount textView Style-->
+    <style name="myTextViewStyle.ScoreAmount">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <!--  Button Style-->
+    <style name="myButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/yellow</item>
+        <item name="rippleColor">@color/grey</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <!--  Team Button Style-->
+    <style name="teamButton" parent="myButtonStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+    <!-- Score Button Style-->
+    <style name="scoreButton" parent="myButtonStyle">
+        <item name="android:layout_width">46dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
